--- a/designers/lamm.html
+++ b/designers/lamm.html
@@ -52,22 +52,22 @@
             
             <div class="card">
                 <a href="../progetti/lamm1.html"> <img src="../immagini/lamm/1.webp" alt=""> </a>
-                <p> <strong>Giocattoli</strong><br>Lora Lamm, 1960 <br>Poster </p>
+                <p> <strong>Giocattoli</strong><br>Lora Lamm, 1960 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="../progetti/lamm2.html"> <img src="../immagini/lamm/2.webp" alt=""> </a>
-                <p> <strong>Natale laRinascente</strong><br>Lora Lamm, 1957 <br>Poster </p>
+                <p> <strong>Natale laRinascente</strong><br>Lora Lamm, 1957 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="../progetti/lamm3.html"> <img src="../immagini/lamm/3.webp" alt=""> </a>
-                <p> <strong>L'Uomo </strong><br>Lora Lamm, 1963 <br>Poster </p>
+                <p> <strong>L'Uomo </strong><br>Lora Lamm, 1963 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="../progetti/lamm4.html"> <img src="../immagini/lamm/4.webp" alt=""> </a>
-                <p> <strong>La moda si diffonde </strong><br>Lora Lamm, 1960 <br>Poster </p>
+                <p> <strong>La moda si diffonde </strong><br>Lora Lamm, 1960 <br>Manifesto </p>
             </div>
             
         </div>
