--- a/designers/mari.html
+++ b/designers/mari.html
@@ -58,7 +58,7 @@
 
             <div class="card">
                 <a href="../progetti/mari2.html"> <img src="../immagini/mari/mari2.webp" alt=""> </a>
-                <p> <strong>Danese</strong><br>Enzo Mari, 1957 <br>Poster </p>
+                <p> <strong>Danese</strong><br>Enzo Mari, 1957 <br>Manifesto </p>
             </div>
 
             <div class="card">
