--- a/designers/milani.html
+++ b/designers/milani.html
@@ -53,22 +53,22 @@
             
             <div class="card">
                 <a href="../progetti/milani1.html"> <img src="../immagini/milani/napoli-milani.webp" alt=""> </a>
-                <p> <strong>For a cleaner Napoli</strong><br>Armando Milani, 1985 <br>Poster </p>
+                <p> <strong>For a cleaner Napoli</strong><br>Armando Milani, 1985 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="../progetti/milani2.html"> <img src="../immagini/milani/peace-war-milani.webp" alt=""> </a>
-                <p> <strong>Translating war into peace</strong><br>Armandi Milani, 2003 <br>Poster </p>
+                <p> <strong>Translating war into peace</strong><br>Armandi Milani, 2003 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="../progetti/milani3.html"> <img src="../immagini/milani/1973-cineclub-brera.webp" alt=""> </a>
-                <p> <strong>Cineclub Brera </strong><br>Armando Milani, 1973 <br>Poster </p>
+                <p> <strong>Cineclub Brera </strong><br>Armando Milani, 1973 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="../progetti/milani4.html"> <img src="../immagini/milani/1967-festival-jazz.webp" alt=""> </a>
-                <p> <strong>Festival de Jazz Montreaux </strong><br>Armando Milani, 1967 <br>Poster </p>
+                <p> <strong>Festival de Jazz Montreaux </strong><br>Armando Milani, 1967 <br>Manifesto </p>
             </div>
             
             <div class="card">
