--- a/designers/monguzzi.html
+++ b/designers/monguzzi.html
@@ -56,17 +56,17 @@
             
             <div class="card">
                 <a href="../progetti/monguzzi1.html"> <img src="../immagini/monguzzi/monguzzi1.webp" alt=""> </a>
-                <p> <strong>Museo di Lugano</strong><br>Bruno Monguzzi, 1992 <br>Poster </p>
+                <p> <strong>Museo di Lugano</strong><br>Bruno Monguzzi, 1992 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="../progetti/monguzzi2.html"> <img src="../immagini/monguzzi/monguzzi2.webp" alt=""> </a>
-                <p> <strong>Fragile</strong><br>Bruno Monguzzi, 1997 <br>Poster </p>
+                <p> <strong>Fragile</strong><br>Bruno Monguzzi, 1997 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="../progetti/monguzzi3.html"> <img src="../immagini/monguzzi/monguzzi3.webp" alt=""> </a>
-                <p> <strong>Ferrari Simposium</strong><br>Bruno Monguzzi, 1996 <br>Poster </p>
+                <p> <strong>Ferrari Simposium</strong><br>Bruno Monguzzi, 1996 <br>Manifesto </p>
             </div>
 
             <div class="card">
@@ -76,7 +76,7 @@
 
             <div class="card">
                 <a href="../progetti/monguzzi5.html"> <img src="../immagini/monguzzi/monguzzi5.webp" alt=""> </a>
-                <p> <strong>Cinquant'anni di carta</strong><br>Bruno Monguzzi 1961 <br>Poster </p>
+                <p> <strong>Cinquant'anni di carta</strong><br>Bruno Monguzzi 1961 <br>Manifesto </p>
             </div>
         </div>
     </section>
