--- a/designers/muratore.html
+++ b/designers/muratore.html
@@ -53,19 +53,19 @@
             
             <div class="card">
                 <a href="../progetti/muratore1.html"> <img src="../immagini/muratore/muratore1.webp" alt=""> </a>
-                <p> <strong>Piranesi</strong><br>Remo Muratore, 1971 <br>Poster </p>
+                <p> <strong>Piranesi</strong><br>Remo Muratore, 1971 <br>Manifesto </p>
             </div>
             <div class="card">
                 <a href="../progetti/muratore2.html"> <img src="../immagini/muratore/muratore2.webp" alt=""> </a>
-                <p> <strong>Pittori di Corrente</strong><br>Remo Muratore, 1971 <br>Poster </p>
+                <p> <strong>Pittori di Corrente</strong><br>Remo Muratore, 1971 <br>Manifesto </p>
             </div>
             <div class="card">
                 <a href="../progetti/muratore3.html"> <img src="../immagini/muratore/muratore3.webp" alt=""> </a>
-                <p> <strong>Rai Monte Venda</strong><br>Remo Muratore, 1954 <br>Advertising </p>
+                <p> <strong>Rai Monte Venda</strong><br>Remo Muratore, 1954 <br>Manifesto </p>
             </div>
             <div class="card">
                 <a href="../progetti/muratore4.html"> <img src="../immagini/muratore/muratore4.webp" alt=""> </a>
-                <p> <strong>Kardex</strong><br>Remo Muratore, 1940 <br>Advertising </p>
+                <p> <strong>Kardex</strong><br>Remo Muratore, 1940 <br>Manifesto </p>
             </div>
 
             
