--- a/progetti/ballmer1.html
+++ b/progetti/ballmer1.html
@@ -39,7 +39,7 @@
     
         <section class="progetto">
             <img src="../immagini/ballmer/ballmer1.webp" alt="">
-            <p>Walter Ballmer, 1961<br>Poster</p>
+            <p>Walter Ballmer, 1961<br>Manifesto</p>
         </section>
    
     <!-- altri progetti-->
@@ -48,12 +48,12 @@
         <div class="grid">
             <div class="card">
                 <a href="ballmer2.html"> <img src="../immagini/ballmer/ballmer2.webp" alt=""> </a>
-                <p> <strong>Lettera 32</strong><br>Walter Ballmer, 1968 <br>Poster </p>
+                <p> <strong>Lettera 32</strong><br>Walter Ballmer, 1968 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="ballmer3.html"> <img src="../immagini/ballmer/ballmer3.webp" alt=""> </a>
-                <p> <strong>Olivetti</strong><br>Walter Ballmer, 1975 <br>Poster </p>
+                <p> <strong>Olivetti</strong><br>Walter Ballmer, 1975 <br>Manifesto </p>
             </div>
         </div>
     </section>
