--- a/designers/ballmer.html
+++ b/designers/ballmer.html
@@ -52,17 +52,17 @@
             
             <div class="card">
                 <a href="../progetti/ballmer1.html"> <img src="../immagini/ballmer/ballmer1.webp" alt=""> </a>
-                <p> <strong>Stile Olivetti</strong><br>Walter Ballmer, 1961 <br>Poster </p>
+                <p> <strong>Stile Olivetti</strong><br>Walter Ballmer, 1961 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="../progetti/ballmer2.html"> <img src="../immagini/ballmer/ballmer2.webp" alt=""> </a>
-                <p> <strong>Lettera 32</strong><br>Walter Ballmer, 1968 <br>Poster </p>
+                <p> <strong>Lettera 32</strong><br>Walter Ballmer, 1968 <br>Manifesto</p>
             </div>
 
             <div class="card">
                 <a href="../progetti/ballmer3.html"> <img src="../immagini/ballmer/ballmer3.webp" alt=""> </a>
-                <p> <strong>Olivetti</strong><br>Walter Ballmer, 1975 <br>Poster </p>
+                <p> <strong>Olivetti</strong><br>Walter Ballmer, 1975 <br>Manifesto </p>
             </div>
         </div>
     </section>
