--- a/designers/calabresi.html
+++ b/designers/calabresi.html
@@ -53,22 +53,22 @@
             
             <div class="card">
                 <a href="../progetti/calabresi1.html"> <img src="../immagini/calabresi/calabresi-1964-total-annpub_1.webp" alt=""> </a>
-                <p> <strong>Total fuel</strong><br>Aldo Calabresi, 1965 <br>Poster </p>
+                <p> <strong>Total fuel</strong><br>Aldo Calabresi, 1965 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="../progetti/calabresi2.html"> <img src="../immagini/calabresi/boggeri-1962-calabresi-roke-pub.webp" alt=""> </a>
-                <p> <strong>Redoxon</strong><br>Aldo Calabresi, 1965 <br>Poster </p>
+                <p> <strong>Redoxon</strong><br>Aldo Calabresi, 1965 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="../progetti/calabresi3.html"> <img src="../immagini/calabresi/calabresi-1964-fieramilano-man.webp" alt=""> </a>
-                <p> <strong>Fiera di Milano </strong><br>Aldo Calabresi, 1964 <br>Poster </p>
+                <p> <strong>Fiera di Milano </strong><br>Aldo Calabresi, 1964 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="../progetti/calabresi4.html"> <img src="../immagini/calabresi/calabresi-1965-FieraMilano-man_1.webp" alt=""> </a>
-                <p> <strong>Fiera di Milano </strong><br>Aldo Calabresi, 1965 <br>Poster </p>
+                <p> <strong>Fiera di Milano </strong><br>Aldo Calabresi, 1965 <br>Manifesto </p>
             </div>
         </div>
     </section>
