--- a/designers/grignani.html
+++ b/designers/grignani.html
@@ -53,7 +53,7 @@
             
             <div class="card">
                 <a href="../progetti/grignani1.html"> <img src="../immagini/grignani/grignani1.webp" alt=""> </a>
-                <p> <strong>FIAT 2800</strong><br>Franco Grignani, 1939 <br>Advertising</p>
+                <p> <strong>FIAT 2800</strong><br>Franco Grignani, 1939 <br>Manifesto</p>
             </div>
 
             <div class="card">
@@ -63,7 +63,7 @@
 
             <div class="card">
                 <a href="../progetti/grignani3.html"> <img src="../immagini/grignani/grignani3.webp" alt=""> </a>
-                <p> <strong>L'evoluzione della grafica</strong><br>Frasnco Grignani, 1964 <br>Poster</p>
+                <p> <strong>L'evoluzione della grafica</strong><br>Frasnco Grignani, 1964 <br>Manifesto</p>
             </div>
 
             <div class="card">
@@ -73,12 +73,12 @@
 
             <div class="card">
                 <a href="../progetti/grignani5.html"> <img src="../immagini/grignani/grignani5.webp" alt=""> </a>
-                <p> <strong>Trama e Sintassi</strong><br>Franco Grignani, 1968 <br>Advertising</p>
+                <p> <strong>Trama e Sintassi</strong><br>Franco Grignani, 1968 <br>Manifesto</p>
             </div>
 
             <div class="card">
                 <a href="../progetti/grignani6.html"> <img src="../immagini/grignani/grignani6.webp" alt=""> </a>
-                <p> <strong>Guaiacalcium Efedrina </strong><br>Franco Grignani, 1953 <br>Advertising</p>
+                <p> <strong>Guaiacalcium Efedrina </strong><br>Franco Grignani, 1953 <br>Manifesto</p>
             </div>
         </div>
     </section>
