--- a/designers/iliprandi.html
+++ b/designers/iliprandi.html
@@ -57,27 +57,27 @@
             
             <div class="card">
                 <a href="../progetti/iliprandi1.html"> <img src="../immagini/iliprandi/iliprandi1.webp" alt=""> </a>
-                <p> <strong>Arflex</strong><br>Giancarlo Iliprandi, 1970 <br>Poster </p> 
+                <p> <strong>Arflex</strong><br>Giancarlo Iliprandi, 1970 <br>Manifesto </p> 
             </div>
 
             <div class="card">
                 <a href="../progetti/iliprandi2.html"> <img src="../immagini/iliprandi/iliprandi2.webp" alt=""> </a>
-                <p> <strong>RB cucine</strong><br>Giancarlo Iliprandi, 1969 <br>Poster </p> 
+                <p> <strong>RB cucine</strong><br>Giancarlo Iliprandi, 1969 <br>Manifesto </p> 
             </div>
 
             <div class="card">
                 <a href="../progetti/iliprandi3.html"> <img src="../immagini/iliprandi/iliprandi3.webp" alt=""> </a>
-                <p> <strong>Basta una pillola </strong><br>Giancarlo Iliprandi, 1967 <br>Poster  </p>
+                <p> <strong>Basta una pillola </strong><br>Giancarlo Iliprandi, 1967 <br>Manifesto  </p>
             </div>
 
             <div class="card">
                 <a href="../progetti/iliprandi4.html"> <img src="../immagini/iliprandi/iliprandi4.webp" alt=""> </a>
-                <p> <strong>No alla violenza</strong><br>Giancarlo Iliprandi, 1975 <br>Poster</p>
+                <p> <strong>No alla violenza</strong><br>Giancarlo Iliprandi, 1975 <br>Manifesto</p>
             </div>
 
             <div class="card">
                 <a href="../progetti/iliprandi5.html"> <img src="../immagini/iliprandi/iliprandi5.webp" alt=""> </a>
-                <p> <strong>La rinascente</strong><br>Giancarlo Iliprandi, 1964 <br>Poster </p>
+                <p> <strong>La rinascente</strong><br>Giancarlo Iliprandi, 1964 <br>Manifesto </p>
             </div>
 
             <div class="card">
