--- a/designers/munari.html
+++ b/designers/munari.html
@@ -58,12 +58,12 @@
 
             <div class="card">
                 <a href="../progetti/munari2.html"> <img src="../immagini/munari/munari2.webp" alt=""> </a>
-                <p> <strong>Campari</strong><br>Bruno Munari, 1974 <br>Poster </p>
+                <p> <strong>Campari</strong><br>Bruno Munari, 1974 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="../progetti/munari3.html"> <img src="../immagini/munari/munari3.webp" alt=""> </a>
-                <p> <strong>Suole Coria</strong><br>Bruno Munari, 1953 <br>Poster </p>
+                <p> <strong>Suole Coria</strong><br>Bruno Munari, 1953 <br>Manifesto </p>
             </div>
 
             <div class="card">
