--- a/designers/steiner.html
+++ b/designers/steiner.html
@@ -55,12 +55,12 @@
             
             <div class="card">
                 <a href="../progetti/steiner3.html"> <img src="../immagini/steiner/t14-steiner.webp" alt=""> </a>
-                <p> <strong>T14 </strong><br>Albe Steiner, 1968 <br>Serie di poster </p>
+                <p> <strong>T14 </strong><br>Albe Steiner, 1968 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="../progetti/steiner4.html"> <img src="../immagini/steiner/coop-steiner.webp" alt=""> </a>
-                <p> <strong>Coop 1 </strong><br>Albe Steiner, 1963 <br>Poster </p>
+                <p> <strong>Coop 1 </strong><br>Albe Steiner, 1963 <br>Manifesto </p>
             </div>
 
             <div class="card">
@@ -70,7 +70,7 @@
 
             <div class="card">
                 <a href="../progetti/steiner2.html"> <img src="../immagini/steiner/pirelli-adv-steiner.webp" alt=""> </a>
-                <p> <strong>Contenitori Pirelli </strong><br>Albe Steiner, 1959 <br>Advertising </p>
+                <p> <strong>Contenitori Pirelli </strong><br>Albe Steiner, 1959 <br>Manifesto </p>
             </div>
 
             <div class="card">
@@ -80,7 +80,7 @@
 
             <div class="card">
                 <a href="../progetti/steiner1.html"> <img src="../immagini/steiner/cnl-steiner-poster.webp" alt=""> </a>
-                <p> <strong>Mostra della Ricostruzione </strong><br>Albe Steiner, 1945 <br>Poster </p>
+                <p> <strong>Mostra della Ricostruzione </strong><br>Albe Steiner, 1945 <br>Manifesto </p>
             </div>
         </div>
     </section>
