--- a/progetti/calabresi1.html
+++ b/progetti/calabresi1.html
@@ -39,7 +39,7 @@
     
         <section class="progetto">
             <img src="../immagini/calabresi/calabresi-1964-total-annpub_1.webp" alt=""> <!-- MODIFICARE -->
-            <p>Aldo Calabresi, 1965<br>Poster</p> <!-- MODIFICARE -->
+            <p>Aldo Calabresi, 1965<br>Manifesto</p> <!-- MODIFICARE -->
         </section>
    
     <!-- altri progetti-->
@@ -49,16 +49,16 @@
 
             <div class="card">
                 <a href="calabresi3.html"> <img src="../immagini/calabresi/calabresi-1964-fieramilano-man.webp" alt=""> </a> <!-- MODIFICARE -->
-                <p> <strong>Fiera di Milano</strong><br>Walter Ballmer, 1964 <br>Poster </p> <!-- MODIFICARE -->
+                <p> <strong>Fiera di Milano</strong><br>Walter Ballmer, 1964 <br>Manifesto </p> <!-- MODIFICARE -->
             </div>
             <div class="card">
                 <a href="calabresi2.html"> <img src="../immagini/calabresi/boggeri-1962-calabresi-roke-pub.webp" alt=""> </a> <!-- MODIFICARE -->
-                <p> <strong>Redoxon</strong><br>Aldo Calabresi, 1962 <br>Poster </p> <!-- MODIFICARE -->
+                <p> <strong>Redoxon</strong><br>Aldo Calabresi, 1962 <br>Manifesto </p> <!-- MODIFICARE -->
             </div>
 
             <div class="card">
                 <a href="calabresi4.html"> <img src="../immagini/calabresi/calabresi-1965-FieraMilano-man_1.webp" alt=""> </a> <!-- MODIFICARE -->
-                <p> <strong>Fiera di Milano</strong><br>Aldo Calabresi, 1965 <br>Poster </p> <!-- MODIFICARE -->
+                <p> <strong>Fiera di Milano</strong><br>Aldo Calabresi, 1965 <br>Manifesto </p> <!-- MODIFICARE -->
             </div>
         </div>
     </section>
