--- a/progetti/calabresi2.html
+++ b/progetti/calabresi2.html
@@ -40,7 +40,7 @@
     
         <section class="progetto">
             <img src="../immagini/calabresi/boggeri-1962-calabresi-roke-pub.webp" alt=""> <!-- MODIFICARE -->
-            <p>Aldo Calabresi, 1962<br>Poster</p> <!-- MODIFICARE -->
+            <p>Aldo Calabresi, 1962<br>Manifesto</p> <!-- MODIFICARE -->
         </section>
    
     <!-- altri progetti-->
@@ -50,16 +50,16 @@
 
             <div class="card">
                 <a href="calabresi3.html"> <img src="../immagini/calabresi/calabresi-1964-total-annpub_1.webp" alt=""> </a> <!-- MODIFICARE -->
-                <p> <strong>Fiera di Milano</strong><br>Walter Ballmer, 1965 <br>Poster </p> <!-- MODIFICARE -->
+                <p> <strong>Fiera di Milano</strong><br>Walter Ballmer, 1965 <br>Manifesto </p> <!-- MODIFICARE -->
             </div>
             <div class="card">
                 <a href="calabresi1.html"> <img src="../immagini/calabresi/boggeri-1962-calabresi-roke-pub.webp" alt=""> </a> <!-- MODIFICARE -->
-                <p> <strong>Total fuel</strong><br>Aldo Calabresi, 1962 <br>Poster </p> <!-- MODIFICARE -->
+                <p> <strong>Total fuel</strong><br>Aldo Calabresi, 1962 <br>Manifesto </p> <!-- MODIFICARE -->
             </div>
 
             <div class="card">
                 <a href="calabresi4.html"> <img src="../immagini/calabresi/calabresi-1965-FieraMilano-man_1.webp" alt=""> </a> <!-- MODIFICARE -->
-                <p> <strong>Fiera di Milano</strong><br>Aldo Calabresi, 1965 <br>Poster </p> <!-- MODIFICARE -->
+                <p> <strong>Fiera di Milano</strong><br>Aldo Calabresi, 1965 <br>Manifesto </p> <!-- MODIFICARE -->
             </div>
         </div>
     </section>
