--- a/progetti/grignani1.html
+++ b/progetti/grignani1.html
@@ -40,7 +40,7 @@
     
         <section class="progetto">
             <img src="../immagini/grignani/grignani1.webp" alt="">
-            <p>Franco Grignani, 1939<br>Advertising</p>
+            <p>Franco Grignani, 1939<br>Manifesto</p>
         </section>
    
     <!-- altri progetti-->
@@ -59,17 +59,17 @@
 
             <div class="card">
                 <a href="grignani4.html"> <img src="../immagini/grignani/grignani4.webp" alt=""> </a>
-                <p> <strong>Carte Patinate</strong><br>Franco Grignani, 1965 <br>Advertising </p>
+                <p> <strong>Carte Patinate</strong><br>Franco Grignani, 1965 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="grignani5.html"> <img src="../immagini/grignani/grignani5.webp" alt=""> </a>
-                <p> <strong>Trama e Sintassi</strong><br>Franco Grignani, 1968 <br>Advertising</p>
+                <p> <strong>Trama e Sintassi</strong><br>Franco Grignani, 1968 <br>Manifesto</p>
             </div>
 
             <div class="card">
                 <a href="grignani6.html"> <img src="../immagini/grignani/grignani6.webp" alt=""> </a>
-                <p> <strong>Guaiacalcium Efedrina </strong><br>Franco Grignani, 1953 <br>Advertising </p>
+                <p> <strong>Guaiacalcium Efedrina </strong><br>Franco Grignani, 1953 <br>Manifesto </p>
             </div>
 
         </div>
