--- a/progetti/huber3.html
+++ b/progetti/huber3.html
@@ -49,17 +49,17 @@
             
             <div class="card">
                 <a href="huber2.html"> <img src="../immagini/huber/huber2.webp" alt=""> </a>
-                <p> <strong>Autodromo di Monza </strong><br>Max Huber, 1948 <br>Poster </p>
+                <p> <strong>Autodromo di Monza </strong><br>Max Huber, 1948 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="huber1.html"> <img src="../immagini/huber/huber1.webp" alt=""> </a>
-                <p> <strong>La Rinascente</strong><br>Max Huber, 1951 <br>Poster</p>
+                <p> <strong>La Rinascente</strong><br>Max Huber, 1951 <br>Manifesto</p>
             </div>
 
             <div class="card">
                 <a href="huber4.html"> <img src="../immagini/huber/huber4.webp" alt=""> </a>
-                <p> <strong>Jazztime</strong><br>Max Huber, 1952  <br>Poster</p>
+                <p> <strong>Jazztime</strong><br>Max Huber, 1952  <br>Manifesto</p>
             </div>
 
             <div class="card">
@@ -69,7 +69,7 @@
 
             <div class="card">
                 <a href="huber6.html"> <img src="../immagini/huber/huber6.webp" alt=""> </a>
-                <p> <strong>Borsalino</strong><br>Max Huber, 1950 <br>Poster</p>
+                <p> <strong>Borsalino</strong><br>Max Huber, 1950 <br>Manifesto</p>
             </div>
         </div>
     </section>
