--- a/progetti/huber4.html
+++ b/progetti/huber4.html
@@ -41,7 +41,7 @@
     
         <section class="progetto">
             <img src="../immagini/huber/huber4.webp" alt="">
-            <p>Max Huber, 1952<br>Poster</p>
+            <p>Max Huber, 1952<br>Manifesto</p>
         </section>
    
     <!-- altri progetti-->
@@ -51,7 +51,7 @@
             
             <div class="card">
                 <a href="huber2.html"> <img src="../immagini/huber/huber2.webp" alt=""> </a>
-                <p> <strong>Autodromo di Monza </strong><br>Max Huber, 1948 <br>Poster </p>
+                <p> <strong>Autodromo di Monza </strong><br>Max Huber, 1948 <br>Manifesto </p>
             </div>
 
             <div class="card">
@@ -61,7 +61,7 @@
 
             <div class="card">
                 <a href="huber1.html"> <img src="../immagini/huber/huber1.webp" alt=""> </a>
-                <p> <strong>La Rinascente</strong><br>Max Huber, 1951 <br>Poster </p>
+                <p> <strong>La Rinascente</strong><br>Max Huber, 1951 <br>Manifesto </p>
             </div>
 
             <div class="card">
@@ -71,7 +71,7 @@
 
             <div class="card">
                 <a href="huber6.html"> <img src="../immagini/huber/huber6.webp" alt=""> </a>
-                <p> <strong>Borsalino</strong><br>Max Huber, 1950 <br>Poster</p>
+                <p> <strong>Borsalino</strong><br>Max Huber, 1950 <br>Manifesto</p>
             </div>
         </div>
     </section>
