--- a/progetti/iliprandi3.html
+++ b/progetti/iliprandi3.html
@@ -44,7 +44,7 @@
     
         <section class="progetto">
             <img src="../immagini/iliprandi/iliprandi3.webp" alt="">
-            <p>Giancarlo Iliprandi, 1969 <br>Poster</p>
+            <p>Giancarlo Iliprandi, 1969 <br>Manifesto</p>
         </section>
    
     <!-- altri progetti-->
@@ -53,22 +53,22 @@
         <div class="grid">
             <div class="card">
                 <a href="iliprandi1.html"> <img src="../immagini/iliprandi/iliprandi1.webp" alt=""> </a>
-                <p> <strong>Arflex</strong><br>Giancarlo Iliprandi, 1970 <br>Poster </p>
+                <p> <strong>Arflex</strong><br>Giancarlo Iliprandi, 1970 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="iliprandi2.html"> <img src="../immagini/iliprandi/iliprandi2.webp" alt=""> </a>
-                <p> <strong>RB cucine</strong><br>Giancarlo Iliprandi, 1969 <br>Poster </p> 
+                <p> <strong>RB cucine</strong><br>Giancarlo Iliprandi, 1969 <br>Manifesto </p> 
             </div>
 
             <div class="card">
                 <a href="iliprandi4.html"> <img src="../immagini/iliprandi/iliprandi4.webp" alt=""> </a>
-                <p> <strong>No alla violenza</strong><br>Giancarlo Iliprandi, 1975 <br>Poster</p>
+                <p> <strong>No alla violenza</strong><br>Giancarlo Iliprandi, 1975 <br>Manifesto</p>
             </div>
 
             <div class="card">
                 <a href="iliprandi5.html"> <img src="../immagini/iliprandi/iliprandi5.webp" alt=""> </a>
-                <p> <strong>La rinascente</strong><br>Giancarlo Iliprandi, 1964 <br>Poster </p>
+                <p> <strong>La rinascente</strong><br>Giancarlo Iliprandi, 1964 <br>Manifesto </p>
             </div>
 
             <div class="card">
