--- a/progetti/lamm3.html
+++ b/progetti/lamm3.html
@@ -41,7 +41,7 @@
     
         <section class="progetto">
             <img src="../immagini/lamm/3.webp" alt=""> <!-- MODIFICARE -->
-            <p>Lora Lamm, 1960<br>Poster</p> <!-- MODIFICARE -->
+            <p>Lora Lamm, 1960<br>Manifesto</p> <!-- MODIFICARE -->
         </section>
    
     <!-- altri progetti-->
@@ -51,15 +51,15 @@
 
             <div class="card">
                 <a href="lamm1.html"> <img src="../immagini/lamm/1.webp" alt=""> </a> <!-- MODIFICARE -->
-                <p> <strong>Giocattoli</strong><br>Lora Lamm, 1960 <br>Poster </p> <!-- MODIFICARE -->
+                <p> <strong>Giocattoli</strong><br>Lora Lamm, 1960 <br>Manifesto </p> <!-- MODIFICARE -->
             </div>
             <div class="card">
                 <a href="lamm2.html"> <img src="../immagini/lamm/2.webp" alt=""> </a> <!-- MODIFICARE -->
-                <p> <strong>Natale laRinascente</strong><br>Lora Lamm, 1957 <br>Poster </p> <!-- MODIFICARE -->
+                <p> <strong>Natale laRinascente</strong><br>Lora Lamm, 1957 <br>Manifesto </p> <!-- MODIFICARE -->
             </div>
             <div class="card">
                 <a href="lamm4.html"> <img src="../immagini/lamm/4.webp" alt=""> </a> <!-- MODIFICARE -->
-                <p> <strong>La moda si diffonde</strong><br>Lora Lamm, 1960 <br>Poster </p> <!-- MODIFICARE -->
+                <p> <strong>La moda si diffonde</strong><br>Lora Lamm, 1960 <br>Manifesto </p> <!-- MODIFICARE -->
             </div>
 
         </div>
