--- a/progetti/monguzzi2.html
+++ b/progetti/monguzzi2.html
@@ -40,7 +40,7 @@
     
         <section class="progetto">
             <img src="../immagini/monguzzi/monguzzi2.webp" alt=""> <!-- MODIFICARE -->
-            <p>Bruno Monguzzi, 1997 <br>Poster </p> <!-- MODIFICARE -->
+            <p>Bruno Monguzzi, 1997 <br>Manifesto </p> <!-- MODIFICARE -->
         </section>
    
     <!-- altri progetti-->
@@ -49,12 +49,12 @@
         <div class="grid">
             <div class="card">
                 <a href="monguzzi1.html"> <img src="../immagini/monguzzi/monguzzi1.webp" alt=""> </a>
-                <p> <strong>Museo di Lugano</strong><br>Bruno Monguzzi, 1992 <br>Poster </p>
+                <p> <strong>Museo di Lugano</strong><br>Bruno Monguzzi, 1992 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="monguzzi3.html"> <img src="../immagini/monguzzi/monguzzi3.webp" alt=""> </a>
-                <p> <strong>Ferrari Simposium</strong><br>Bruno Monguzzi, 1996 <br>Poster </p>
+                <p> <strong>Ferrari Simposium</strong><br>Bruno Monguzzi, 1996 <br>Manifesto </p>
             </div>
             
             <div class="card">
@@ -64,7 +64,7 @@
 
             <div class="card">
                 <a href="monguzzi5.html"> <img src="../immagini/monguzzi/monguzzi5.webp" alt=""> </a> <!-- MODIFICARE -->
-                <p> <strong>Cinquant'anni di carta</strong><br>Bruno Monguzzi 1961 <br>Poster </p> <!-- MODIFICARE -->
+                <p> <strong>Cinquant'anni di carta</strong><br>Bruno Monguzzi 1961 <br>Manifesto </p> <!-- MODIFICARE -->
             </div>
 
         </div>
