--- a/progetti/monguzzi3.html
+++ b/progetti/monguzzi3.html
@@ -44,7 +44,7 @@ Questo poster è nella collezione di Cooper Hewitt, Smithsonian Design Museum.</
     
         <section class="progetto">
             <img src="../immagini/monguzzi/monguzzi3.webp" alt=""> <!-- MODIFICARE -->
-            <br>Bruno Monguzzi, 1996 <br>Poster </p> <!-- MODIFICARE -->
+            <br>Bruno Monguzzi, 1996 <br>Manifesto </p> <!-- MODIFICARE -->
         </section>
    
     <!-- altri progetti-->
@@ -53,12 +53,12 @@ Questo poster è nella collezione di Cooper Hewitt, Smithsonian Design Museum.</
         <div class="grid">
             <div class="card">
                 <a href="monguzzi1.html"> <img src="../immagini/monguzzi/monguzzi1.webp" alt=""> </a>
-                <p> <strong>Museo di Lugano</strong><br>Bruno Monguzzi, 1992 <br>Poster </p>
+                <p> <strong>Museo di Lugano</strong><br>Bruno Monguzzi, 1992 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="monguzzi2.html"> <img src="../immagini/monguzzi/monguzzi2.webp" alt=""> </a>
-                <p> <strong>Fragile</strong><br>Bruno Monguzzi, 1997 <br>Poster </p>
+                <p> <strong>Fragile</strong><br>Bruno Monguzzi, 1997 <br>Manifesto </p>
             </div>
             
             <div class="card">
@@ -68,7 +68,7 @@ Questo poster è nella collezione di Cooper Hewitt, Smithsonian Design Museum.</
 
             <div class="card">
                 <a href="monguzzi5.html"> <img src="../immagini/monguzzi/monguzzi5.webp" alt=""> </a> <!-- MODIFICARE -->
-                <p> <strong>Cinquant'anni di carta</strong><br>Bruno Monguzzi 1961 <br>Poster </p> <!-- MODIFICARE -->
+                <p> <strong>Cinquant'anni di carta</strong><br>Bruno Monguzzi 1961 <br>Manifesto </p> <!-- MODIFICARE -->
             </div>
 
         </div>
