--- a/progetti/munari2.html
+++ b/progetti/munari2.html
@@ -39,7 +39,7 @@
     
         <section class="progetto">
             <img src="../immagini/munari/munari2.webp" alt="">
-            <p>Bruno Munari, 1974 <br>Poster</p>
+            <p>Bruno Munari, 1974 <br>Manifesto</p>
         </section>
    
     <!-- altri progetti-->
@@ -53,7 +53,7 @@
 
             <div class="card">
                 <a href="munari3.html"> <img src="../immagini/munari/munari3.webp" alt=""> </a>
-                <p> <strong>Suole Coria</strong><br>Bruno Munari, 1953 <br>Poster </p>
+                <p> <strong>Suole Coria</strong><br>Bruno Munari, 1953 <br>Manifesto </p>
             </div>
 
             <div class="card">
