--- a/progetti/muratore3.html
+++ b/progetti/muratore3.html
@@ -50,11 +50,11 @@
 
             <div class="card">
                 <a href="muratore1.html"> <img src="../immagini/muratore/muratore1.webp" alt=""> </a> <!-- MODIFICARE -->
-                <p> <strong>Piranesi</strong><br>Remo Muratore, 1971 <br>Poster </p> <!-- MODIFICARE -->
+                <p> <strong>Piranesi</strong><br>Remo Muratore, 1971 <br>Manifesto </p> <!-- MODIFICARE -->
             </div>
             <div class="card">
                 <a href="muratore2.html"> <img src="../immagini/muratore/muratore2.webp" alt=""> </a> <!-- MODIFICARE -->
-                <p> <strong>Pittori di Corrente</strong><br>Remo Muratore, 1971 <br>Poster </p> <!-- MODIFICARE -->
+                <p> <strong>Pittori di Corrente</strong><br>Remo Muratore, 1971 <br>Manifesto </p> <!-- MODIFICARE -->
             </div>
             <div class="card">
                 <a href="muratore4.html"> <img src="../immagini/muratore/muratore4.webp" alt=""> </a> <!-- MODIFICARE -->
