--- a/progetti/schawinsky1.html
+++ b/progetti/schawinsky1.html
@@ -41,7 +41,7 @@
     
         <section class="progetto">
             <img src="../immagini/Schawinsky/1.webp" alt=""> <!-- MODIFICARE -->
-            <p>Xanti Schawinsky, 1934<br>Poster</p> <!-- MODIFICARE -->
+            <p>Xanti Schawinsky, 1934<br>Manifesto</p> <!-- MODIFICARE -->
         </section>
    
     <!-- altri progetti-->
@@ -54,19 +54,19 @@
             </div>
             <div class="card">
                 <a href="schawinsky3.html"> <img src="../immagini/Schawinsky/3.webp" alt=""> </a>
-                <p> <strong>Illy Caffé</strong><br>Xanti Schawinsky, 1934 <br>Poster </p>
+                <p> <strong>Illy Caffé</strong><br>Xanti Schawinsky, 1934 <br>Manifesto </p>
             </div>
             <div class="card">
                 <a href="schawinsky4.html"> <img src="../immagini/Schawinsky/4.webp" alt=""> </a>
-                <p> <strong>Princeps</strong><br>Xanti Schawinsky, 1934 <br>Poster </p>
+                <p> <strong>Princeps</strong><br>Xanti Schawinsky, 1934 <br>Manifesto </p>
             </div>
             <div class="card">
                 <a href="schawinsky5.html"> <img src="../immagini/Schawinsky/5.webp" alt=""> </a>
-                <p> <strong>La pubblicità</strong><br>Xanti Schawinsky, 1935 <br>Poster </p>
+                <p> <strong>La pubblicità</strong><br>Xanti Schawinsky, 1935 <br>Manifesto </p>
             </div>
             <div class="card">
                 <a href="schawinsky6.html"> <img src="../immagini/Schawinsky/6.webp" alt=""> </a>
-                <p> <strong>Olivetti MP1</strong><br>Xanti Schawinsky, 1932 <br>Poster </p>
+                <p> <strong>Olivetti MP1</strong><br>Xanti Schawinsky, 1932 <br>Manifesto </p>
             </div>
         </div>
     </section>
