--- a/progetti/vivarelli4.html
+++ b/progetti/vivarelli4.html
@@ -40,7 +40,7 @@
     
         <section class="progetto">
             <img src="../immagini/vivarelli/4.webp" alt=""> <!-- MODIFICARE -->
-            <p>Carlo Vivarelli, 1946<br>Poster</p> <!-- MODIFICARE -->
+            <p>Carlo Vivarelli, 1946<br>Editoria</p> <!-- MODIFICARE -->
         </section>
    
     <!-- altri progetti-->
