--- a/progetti/carboni3.html
+++ b/progetti/carboni3.html
@@ -39,7 +39,7 @@
     
         <section class="progetto">
             <img src="../immagini/carboni/carboni3.webp" alt="">
-            <p>Erberto Carboni, 1953<br>Advertising </p>
+            <p>Erberto Carboni, 1953<br>Manifesto </p>
         </section>
    
     <!-- altri progetti-->
@@ -49,7 +49,7 @@
             
             <div class="card">
                 <a href="carboni2.html"> <img src="../immagini/carboni/carboni2.webp" alt=""> </a>
-                <p> <strong>Crociere Italia </strong><br>Erberto Carboni, 1937 <br>Poster </p>
+                <p> <strong>Crociere Italia </strong><br>Erberto Carboni, 1937 <br>Manifesto </p>
             </div>
 
             <div class="card">
@@ -59,17 +59,17 @@
 
             <div class="card">
                 <a href="carboni4.html"> <img src="../immagini/carboni/carboni4.webp" alt=""> </a>
-                <p> <strong>RAI</strong><br>Erberto Carboni, 1959 <br>Advertising </p>
+                <p> <strong>RAI</strong><br>Erberto Carboni, 1959 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="carboni5.html"> <img src="../immagini/carboni/carboni5.webp" alt=""> </a>
-                <p> <strong>Lotteria di Monza </strong><br>Erberto Carboni, 1956<br>Poster </p>
+                <p> <strong>Lotteria di Monza </strong><br>Erberto Carboni, 1956<br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="carboni6.html"> <img src="../immagini/carboni/carboni6.webp" alt=""> </a>
-                <p> <strong>La pasta del buon appetito </strong><br>Erberto Carboni, 1952  <br>Advertising </p>
+                <p> <strong>La pasta del buon appetito </strong><br>Erberto Carboni, 1952  <br>Manifesto </p>
             </div>
         </div>
     </section>
