--- a/progetti/carboni4.html
+++ b/progetti/carboni4.html
@@ -43,7 +43,7 @@
     
         <section class="progetto">
             <img src="../immagini/carboni/carboni4.webp" alt="">
-            <p>Erberto Carboni, 1959<br>Advertising </p>
+            <p>Erberto Carboni, 1959<br>Manifesto </p>
         </section>
    
     <!-- altri progetti-->
@@ -53,27 +53,27 @@
             
             <div class="card">
                 <a href="carboni2.html"> <img src="../immagini/carboni/carboni2.webp" alt=""> </a>
-                <p> <strong>Crociere Italia </strong><br>Erberto Carboni, 1937 <br>Poster </p>
+                <p> <strong>Crociere Italia </strong><br>Erberto Carboni, 1937 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="carboni3.html"> <img src="../immagini/carboni/carboni3.webp" alt=""> </a>
-                <p> <strong>Vera pasta all'uovo</strong><br>Erberto Carboni, 1953 <br>Advertising </p>
+                <p> <strong>Vera pasta all'uovo</strong><br>Erberto Carboni, 1953 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="carboni1.html"> <img src="../immagini/carboni/carboni1.webp" alt=""> </a>
-                <p> <strong>Domus n.310</strong><br>Erberto Carboni, 1955 <br>Advertising </p>
+                <p> <strong>Domus n.310</strong><br>Erberto Carboni, 1955 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="carboni5.html"> <img src="../immagini/carboni/carboni5.webp" alt=""> </a>
-                <p> <strong>Lotteria di Monza </strong><br>Erberto Carboni, 1956<br>Poster </p>
+                <p> <strong>Lotteria di Monza </strong><br>Erberto Carboni, 1956<br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="carboni6.html"> <img src="../immagini/carboni/carboni6.webp" alt=""> </a>
-                <p> <strong>La pasta del buon appetito </strong><br>Erberto Carboni, 1952  <br>Advertising </p>
+                <p> <strong>La pasta del buon appetito </strong><br>Erberto Carboni, 1952  <br>Manifesto </p>
             </div>
         </div>
     </section>
