--- a/progetti/carboni5.html
+++ b/progetti/carboni5.html
@@ -40,7 +40,7 @@
     
         <section class="progetto">
             <img src="../immagini/carboni/carboni5.webp" alt="">
-            <p>Erberto Carboni, 1956<br>Poster </p>
+            <p>Erberto Carboni, 1956<br>Manifesto </p>
         </section>
    
     <!-- altri progetti-->
@@ -50,17 +50,17 @@
             
             <div class="card">
                 <a href="carboni2.html"> <img src="../immagini/carboni/carboni2.webp" alt=""> </a>
-                <p> <strong>Crociere Italia </strong><br>Erberto Carboni, 1937 <br>Poster </p>
+                <p> <strong>Crociere Italia </strong><br>Erberto Carboni, 1937 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="carboni3.html"> <img src="../immagini/carboni/carboni3.webp" alt=""> </a>
-                <p> <strong>Vera pasta all'uovo</strong><br>Erberto Carboni, 1953 <br>Advertising </p>
+                <p> <strong>Vera pasta all'uovo</strong><br>Erberto Carboni, 1953 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="carboni4.html"> <img src="../immagini/carboni/carboni4.webp" alt=""> </a>
-                <p> <strong>RAI</strong><br>Erberto Carboni, 1959 <br>Advertising </p>
+                <p> <strong>RAI</strong><br>Erberto Carboni, 1959 <br>Manifesto </p>
             </div>
 
             <div class="card">
@@ -70,7 +70,7 @@
 
             <div class="card">
                 <a href="carboni6.html"> <img src="../immagini/carboni/carboni6.webp" alt=""> </a>
-                <p> <strong>La pasta del buon appetito </strong><br>Erberto Carboni, 1955  <br>Advertising </p>
+                <p> <strong>La pasta del buon appetito </strong><br>Erberto Carboni, 1955  <br>Manifesto </p>
             </div>
         </div>
     </section>
