--- a/progetti/carboni6.html
+++ b/progetti/carboni6.html
@@ -51,22 +51,22 @@
             
             <div class="card">
                 <a href="carboni2.html"> <img src="../immagini/carboni/carboni2.webp" alt=""> </a>
-                <p> <strong>Crociere Italia </strong><br>Erberto Carboni, 1937 <br>Poster </p>
+                <p> <strong>Crociere Italia </strong><br>Erberto Carboni, 1937 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="carboni3.html"> <img src="../immagini/carboni/carboni3.webp" alt=""> </a>
-                <p> <strong>Vera pasta all'uovo</strong><br>Erberto Carboni, 1953 <br>Advertising </p>
+                <p> <strong>Vera pasta all'uovo</strong><br>Erberto Carboni, 1953 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="carboni4.html"> <img src="../immagini/carboni/carboni4.webp" alt=""> </a>
-                <p> <strong>RAI</strong><br>Erberto Carboni, 1959 <br>Advertising </p>
+                <p> <strong>RAI</strong><br>Erberto Carboni, 1959 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="carboni5.html"> <img src="../immagini/carboni/carboni5.webp" alt=""> </a>
-                <p> <strong>Lotteria di Monza </strong><br>Erberto Carboni, 1956<br>Poster </p>
+                <p> <strong>Lotteria di Monza </strong><br>Erberto Carboni, 1956<br>Manifesto </p>
             </div>
 
             <div class="card">
