--- a/progetti/grignani2.html
+++ b/progetti/grignani2.html
@@ -50,7 +50,7 @@
         <div class="grid">
             <div class="card">
                 <a href="grignani1.html"> <img src="../immagini/grignani/grignani1.webp" alt=""> </a>
-                <p> <strong>FIAT 2800</strong><br>Franco Grignani, 1939 <br>Advertising </p>
+                <p> <strong>FIAT 2800</strong><br>Franco Grignani, 1939 <br>Manifesto </p>
             </div>
 
             <div class="card">
@@ -60,17 +60,17 @@
 
             <div class="card">
                 <a href="grignani4.html"> <img src="../immagini/grignani/grignani4.webp" alt=""> </a>
-                <p> <strong>Carte Patinate</strong><br>Franco Grignani, 1965 <br>Advertising </p>
+                <p> <strong>Carte Patinate</strong><br>Franco Grignani, 1965 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="grignani5.html"> <img src="../immagini/grignani/grignani5.webp" alt=""> </a>
-                <p> <strong>Trama e Sintassi</strong><br>Franco Grignani, 1968 <br>Advertising</p>
+                <p> <strong>Trama e Sintassi</strong><br>Franco Grignani, 1968 <br>Manifesto</p>
             </div>
 
             <div class="card">
                 <a href="grignani6.html"> <img src="../immagini/grignani/grignani6.webp" alt=""> </a>
-                <p> <strong>Guaiacalcium Efedrina </strong><br>Franco Grignani, 1953 <br>Advertising </p>
+                <p> <strong>Guaiacalcium Efedrina </strong><br>Franco Grignani, 1953 <br>Manifesto </p>
             </div>
 
         </div>
