--- a/progetti/grignani4.html
+++ b/progetti/grignani4.html
@@ -40,7 +40,7 @@
     
         <section class="progetto">
             <img src="../immagini/grignani/grignani4.webp" alt="">
-            <p>Franco Grignani, 1964 <br>Poster</p>
+            <p>Franco Grignani, 1964 <br>Manifesto</p>
         </section>
    
     <!-- altri progetti-->
@@ -49,7 +49,7 @@
         <div class="grid">
             <div class="card">
                 <a href="grignani1.html"> <img src="../immagini/grignani/grignani1.webp" alt=""> </a>
-                <p> <strong>FIAT 2800</strong><br>Franco Grignani, 1939 <br>Advertising </p>
+                <p> <strong>FIAT 2800</strong><br>Franco Grignani, 1939 <br>Manifesto </p>
             </div>
 
             <div class="card">
@@ -59,17 +59,17 @@
 
             <div class="card">
                 <a href="grignani3.html"> <img src="../immagini/grignani/grignani3.webp" alt=""> </a>
-                <p> <strong>L'evoluzione della grafica</strong><br>Franco Grignani, 1964 <br>Advertising </p>
+                <p> <strong>L'evoluzione della grafica</strong><br>Franco Grignani, 1964 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="grignani5.html"> <img src="../immagini/grignani/grignani5.webp" alt=""> </a>
-                <p> <strong>Trama e Sintassi</strong><br>Franco Grignani, 1968 <br>Advertising</p>
+                <p> <strong>Trama e Sintassi</strong><br>Franco Grignani, 1968 <br>Manifesto</p>
             </div>
 
             <div class="card">
                 <a href="grignani6.html"> <img src="../immagini/grignani/grignani6.webp" alt=""> </a>
-                <p> <strong>Guaiacalcium Efedrina </strong><br>Franco Grignani, 1953 <br>Advertising </p>
+                <p> <strong>Guaiacalcium Efedrina </strong><br>Franco Grignani, 1953 <br>Manifesto </p>
             </div>
 
         </div>
