--- a/progetti/milani1.html
+++ b/progetti/milani1.html
@@ -39,7 +39,7 @@
     
         <section class="progetto">
             <img src="../immagini/milani/napoli-milani.webp" alt=""> <!-- MODIFICARE -->
-            <p>Armando Milani, 1985<br>Poster</p> <!-- MODIFICARE -->
+            <p>Armando Milani, 1985<br>Manifesto</p> <!-- MODIFICARE -->
         </section>
    
     <!-- altri progetti-->
@@ -48,16 +48,16 @@
         <div class="grid">
             <div class="card">
                 <a href="milani2.html"> <img src="../immagini/milani/peace-war-milani.webp" alt=""> </a>
-                <p> <strong>Translating war into peace</strong><br>Armando Milani, 2003 <br>Poster </p>
+                <p> <strong>Translating war into peace</strong><br>Armando Milani, 2003 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="milani3.html"> <img src="../immagini/milani/1973-cineclub-brera.webp" alt=""> </a> <!-- MODIFICARE -->
-                <p> <strong>Cineclub Brera</strong><br>Walter Ballmer, 1973 <br>Poster </p> <!-- MODIFICARE -->
+                <p> <strong>Cineclub Brera</strong><br>Walter Ballmer, 1973 <br>Manifesto </p> <!-- MODIFICARE -->
             </div>
             <div class="card">
                 <a href="milani4.html"> <img src="../immagini/milani/1967-festival-jazz.webp" alt=""> </a> <!-- MODIFICARE -->
-                <p> <strong>Festival de Jazz Montreaux</strong><br>Armando Milani, 1967 <br>Poster </p> <!-- MODIFICARE -->
+                <p> <strong>Festival de Jazz Montreaux</strong><br>Armando Milani, 1967 <br>Manifesto </p> <!-- MODIFICARE -->
             </div>
                         
             <div class="card">
