--- a/progetti/monguzzi5.html
+++ b/progetti/monguzzi5.html
@@ -41,7 +41,7 @@
     
         <section class="progetto">
             <img src="../immagini/monguzzi/monguzzi5.webp" alt=""> <!-- MODIFICARE -->
-            <br>Bruno Monguzzi 1961 <br>Poster </p> <!-- MODIFICARE -->
+            <br>Bruno Monguzzi 1961 <br>Manifesto </p> <!-- MODIFICARE -->
         </section>
    
     <!-- altri progetti-->
@@ -50,17 +50,17 @@
         <div class="grid">
             <div class="card">
                 <a href="monguzzi1.html"> <img src="../immagini/monguzzi/monguzzi1.webp" alt=""> </a>
-                <p> <strong>Museo di Lugano</strong><br>Bruno Monguzzi, 1992 <br>Poster </p>
+                <p> <strong>Museo di Lugano</strong><br>Bruno Monguzzi, 1992 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="monguzzi2.html"> <img src="../immagini/monguzzi/monguzzi2.webp" alt=""> </a>
-                <p> <strong>Fragile</strong><br>Bruno Monguzzi, 1997 <br>Poster </p>
+                <p> <strong>Fragile</strong><br>Bruno Monguzzi, 1997 <br>Manifesto </p>
             </div>
             
             <div class="card">
                 <a href="monguzzi3.html"> <img src="../immagini/monguzzi/monguzzi3.webp" alt=""> </a> <!-- MODIFICARE -->
-                <p> <strong>Ferrari Simposium</strong><br>Bruno Monguzzi, 1996 <br>Poster </p> <!-- MODIFICARE -->
+                <p> <strong>Ferrari Simposium</strong><br>Bruno Monguzzi, 1996 <br>Manifesto </p> <!-- MODIFICARE -->
             </div>
 
             <div class="card">
