--- a/progetti/munari5.html
+++ b/progetti/munari5.html
@@ -57,7 +57,7 @@
 
             <div class="card">
                 <a href="munari3.html"> <img src="../immagini/munari/munari3.webp" alt=""> </a>
-                <p> <strong>Suole Coria</strong><br>Bruno Munari, 1953 <br>Poster </p>
+                <p> <strong>Suole Coria</strong><br>Bruno Munari, 1953 <br>Manifesto </p>
             </div>
 
             <div class="card">
@@ -67,7 +67,7 @@
 
             <div class="card">
                 <a href="munari2.html"> <img src="../immagini/munari/munari2.webp" alt=""> </a>
-                <p> <strong>Campari</strong><br>Bruno Munari, 1974 <br>Poster</p>
+                <p> <strong>Campari</strong><br>Bruno Munari, 1974 <br>Manifesto</p>
             </div>
 
             <div class="card">
