--- a/progetti/muratore1.html
+++ b/progetti/muratore1.html
@@ -40,7 +40,7 @@
     
         <section class="progetto">
             <img src="../immagini/muratore/muratore1.webp" alt=""> <!-- MODIFICARE -->
-            <p>Remo Muratore, 1971<br>Poster</p> <!-- MODIFICARE -->
+            <p>Remo Muratore, 1971<br>Manifesto</p> <!-- MODIFICARE -->
         </section>
    
     <!-- altri progetti-->
@@ -50,7 +50,7 @@
 
             <div class="card">
                 <a href="muratore2.html"> <img src="../immagini/muratore/muratore2.webp" alt=""> </a> <!-- MODIFICARE -->
-                <p> <strong>Pittori di Corrente</strong><br>Remo Muratore, 1971 <br>Poster </p> <!-- MODIFICARE -->
+                <p> <strong>Pittori di Corrente</strong><br>Remo Muratore, 1971 <br>Manifesto </p> <!-- MODIFICARE -->
             </div>
             <div class="card">
                 <a href="muratore3.html"> <img src="../immagini/muratore/muratore3.webp" alt=""> </a> <!-- MODIFICARE -->
