--- a/progetti/nizzoli2.html
+++ b/progetti/nizzoli2.html
@@ -49,7 +49,7 @@
 
             <div class="card">
                 <a href="nizzoli1.html"> <img src="../immagini/nizzoli/nizzoli1.webp" alt=""> </a> <!-- MODIFICARE -->
-                <p> <strong>Campari</strong><br>Marcello Nizzoli, 1927 <br>Poster</p> <!-- MODIFICARE -->
+                <p> <strong>Campari</strong><br>Marcello Nizzoli, 1927 <br>Manifesto</p> <!-- MODIFICARE -->
             </div>
             <div class="card">
                 <a href="nizzoli3.html"> <img src="../immagini/nizzoli/nizzoli3.webp" alt=""> </a> <!-- MODIFICARE -->
