--- a/progetti/nizzoli5.html
+++ b/progetti/nizzoli5.html
@@ -51,7 +51,7 @@
 
             <div class="card">
                 <a href="nizzoli1.html"> <img src="../immagini/nizzoli/nizzoli1.webp" alt=""> </a> <!-- MODIFICARE -->
-                <p> <strong>Campari</strong><br>Marcello Nizzoli, 1927 <br>Poster</p> <!-- MODIFICARE -->
+                <p> <strong>Campari</strong><br>Marcello Nizzoli, 1927 <br>Manifesto</p> <!-- MODIFICARE -->
             </div>
             <div class="card">
                 <a href="nizzoli2.html"> <img src="../immagini/nizzoli/nizzoli2.webp" alt=""> </a> <!-- MODIFICARE -->
