--- a/progetti/schawinsky4.html
+++ b/progetti/schawinsky4.html
@@ -40,7 +40,7 @@
     
         <section class="progetto">
             <img src="../immagini/Schawinsky/4.webp" alt=""> <!-- MODIFICARE -->
-            <p>Xanti Schawinsky, 1934<br>Poster</p> <!-- MODIFICARE -->
+            <p>Xanti Schawinsky, 1934<br>Manifesto</p> <!-- MODIFICARE -->
         </section>
    
     <!-- altri progetti-->
@@ -49,15 +49,15 @@
         <div class="grid">
             <div class="card">
                 <a href="schawinsky1.html"> <img src="../immagini/Schawinsky/1.webp" alt=""> </a>
-                <p> <strong>La Rivista - Sì</strong><br>Xanti Schawinsky, 1934 <br>Poster </p>
+                <p> <strong>La Rivista - Sì</strong><br>Xanti Schawinsky, 1934 <br>Manifesto </p>
             </div>
             <div class="card">
                 <a href="schawinsky2.html"> <img src="../immagini/Schawinsky/2.webp" alt=""> </a>
-                <p> <strong>Olivetti M40</strong><br>Xanti Schawinsky, 1934 <br>Poster </p>
+                <p> <strong>Olivetti M40</strong><br>Xanti Schawinsky, 1934 <br>Manifesto </p>
             </div>
             <div class="card">
                 <a href="schawinsky3.html"> <img src="../immagini/Schawinsky/3.webp" alt=""> </a>
-                <p> <strong>Illy Caffé</strong><br>Xanti Schawinsky, 1934 <br>Poster </p>
+                <p> <strong>Illy Caffé</strong><br>Xanti Schawinsky, 1934 <br>Manifesto </p>
             </div>
             <div class="card">
                 <a href="schawinsky5.html"> <img src="../immagini/Schawinsky/5.webp" alt=""> </a>
@@ -65,7 +65,7 @@
             </div>
             <div class="card">
                 <a href="schawinsky6.html"> <img src="../immagini/Schawinsky/6.webp" alt=""> </a>
-                <p> <strong>Olivetti MP1</strong><br>Xanti Schawinsky, 1932 <br>Poster </p>
+                <p> <strong>Olivetti MP1</strong><br>Xanti Schawinsky, 1932 <br>Manifesto </p>
             </div>
         </div>
     </section>
