--- a/progetti/steiner3.html
+++ b/progetti/steiner3.html
@@ -40,7 +40,7 @@
     
         <section class="progetto">
             <img src="../immagini/steiner/t14-steiner.webp" alt="">
-            <p>Albe Steiner, 1968 <br>Serie di poster </p>
+            <p>Albe Steiner, 1968 <br>Manifesto </p>
         </section>
    
     <!-- altri progetti-->
@@ -50,12 +50,12 @@
             
             <div class="card">
                 <a href="steiner1.html"> <img src="../immagini/steiner/cnl-steiner-poster.webp" alt=""> </a>
-                <p> <strong>Mostra della Ricostruzione</strong><br>Albe Steiner, 1945 <br>Poster </p>
+                <p> <strong>Mostra della Ricostruzione</strong><br>Albe Steiner, 1945 <br>Manifesto </p>
             </div>
 
             <div class="card">
                 <a href="steiner4.html"> <img src="../immagini/steiner/coop-steiner.webp" alt=""> </a>
-                <p> <strong>Coop 1 </strong><br>Albe Steiner, 1963 <br>Poster </p>
+                <p> <strong>Coop 1 </strong><br>Albe Steiner, 1963 <br>Manifesto </p>
             </div>
 
             <div class="card">
@@ -65,7 +65,7 @@
 
             <div class="card">
                 <a href="steiner2.html"> <img src="../immagini/steiner/pirelli-adv-steiner.webp" alt=""> </a>
-                <p> <strong>Contenitori Pirelli </strong><br>Albe Steiner, 1959 <br>Advertising </p>
+                <p> <strong>Contenitori Pirelli </strong><br>Albe Steiner, 1959 <br>Manifesto </p>
             </div>
 
             <div class="card">
