--- a/projects.html
+++ b/projects.html
@@ -421,7 +421,7 @@
       </div>
 
       <div class="foto foto2">
-        <a href="../progetti/nizzoli5.html"> <img src="../immagini/nizzoli/nizzoli5.webp" alt=""> </a>
+        <a href="progetti/nizzoli5.html"> <img src="immagini/nizzoli/nizzoli5.webp" alt=""> </a>
         <p> <strong>Olivetti Lexicon</strong><br>Marcello Nizzoli, 1949 <br>Manifesto</p>
     </div>
 
