--- a/projects.html
+++ b/projects.html
@@ -396,29 +396,24 @@
       </div>
      
       <div class="foto foto2">
-          <a href="progetti/schawinsky1.html"> <img src="immagini/Schawinsky/1.webp" alt=""> </a>
-          <p> <strong>La Rivista - Sì</strong><br>Xanti Schawisnky, 1934 <br>Manifesto </p>
-      </div>
+        <a href="progetti/schawinsky1.html"> <img src="immagini/Schawinsky/1.webp" alt=""> </a>
+        <p> <strong>La Rivista - Sì</strong><br>Xanti Schawinsky, 1934 <br>Manifesto </p>
+    </div>
 
-      <div class="foto foto2">
-          <a href="progetti/schawinsky2.html"> <img src="immagini/Schawinsky/2.webp" alt=""> </a>
-          <p> <strong>Olivetti M40</strong><br>Xanti Schawisnky, 1934 <br>Manifesto </p>
-      </div>
+    <div class="foto foto2">
+        <a href="progetti/schawinsky2.html"> <img src="immagini/Schawinsky/2.webp" alt=""> </a>
+        <p> <strong>Illy Caffé</strong><br>Xanti Schawinsky, 1934 <br>Manifesto </p>
+    </div>
 
-      <div class="foto foto2">
-          <a href="progetti/schawinsky3.html"> <img src="immagini/Schawinsky/3.webp" alt=""> </a>
-          <p> <strong>Illy Caffé</strong><br>Xanti Schawisnky, 1934 <br>Manifesto </p>
-      </div>
+    <div class="foto foto2">
+        <a href="progetti/schawinsky4.html"> <img src="immagini/Schawinsky/4.webp" alt=""> </a>
+        <p> <strong>Princeps</strong><br>Xanti Schawinsky, 1934 <br>Manifesto </p>
+    </div>
 
-      <div class="foto foto2">
-          <a href="progetti/schawinsky4.html"> <img src="immagini/Schawinsky/4.webp" alt=""> </a>
-          <p> <strong>Princeps</strong><br>Xanti Schawisnky, 1934 <br>Manifesto </p>
-      </div>
-
-      <div class="foto foto2">
-          <a href="progetti/schawinsky6.html"> <img src="immagini/Schawinsky/6.webp" alt=""> </a>
-          <p> <strong>Olivetti MP1</strong><br>Xanti Schawisnky, 1932 <br>Manifesto </p>
-      </div>
+    <div class="foto foto2">
+        <a href="progetti/schawinsky6.html"> <img src="immagini/Schawinsky/6.webp" alt=""> </a>
+        <p> <strong>Olivetti MP1</strong><br>Xanti Schawinsky, 1932 <br>Manifesto </p>
+    </div>
 
       <div class="foto foto2">
         <a href="progetti/nizzoli5.html"> <img src="immagini/nizzoli/nizzoli5.webp" alt=""> </a>
